include/ciaaw_saw_2021.h

/** @brief C API Object representing an element.*/
struct ciaaw_saw_element_t_2021{
    char element[25]; /**< Element name. */
    char symbol[9]; /**< Element symbol. */
    int z; /**< Element atomic number. */
    double saw_min; /**< Min standard atomic weight. */
    double saw_max; /**< Max standard atomic weight. */
    double saw; /**< Value standard atomic weight. */
    double saw_u; /**< Uncertainty standard atomic weight. */
    double asaw; /**< Abridged value standard atomic weight. */
    double asaw_u; /**< Abridged uncertainty standard atomic weight. */
};
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Lr_2021;/**< C API Lr_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Rf_2021;/**< C API Rf_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Db_2021;/**< C API Db_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Sg_2021;/**< C API Sg_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Bh_2021;/**< C API Bh_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Hs_2021;/**< C API Hs_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Mt_2021;/**< C API Mt_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Ds_2021;/**< C API Ds_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Rg_2021;/**< C API Rg_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Cn_2021;/**< C API Cn_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Nh_2021;/**< C API Nh_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Fl_2021;/**< C API Fl_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Mc_2021;/**< C API Mc_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Lv_2021;/**< C API Lv_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Ts_2021;/**< C API Ts_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Og_2021;/**< C API Og_2021.*/