src/ciaaw_saw_2021.f90


!> lawrencium.
type(element_t_2021), parameter, public :: Lr_2021 =&
element_t_2021("lawrencium","Lr", 103, nan, nan, nan, nan, nan, nan)
!> C API lawrencium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Lr_2021") :: capi_Lr_2021 =&
capi_element_t_2021(&
["l","a","w","r","e","n","c","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["L","r",c_null_char, " "," "," "," "," "," "], &
Lr_2021%z, &
Lr_2021%saw_max, Lr_2021%saw_min, Lr_2021%saw, Lr_2021%saw_u, Lr_2021%asaw, Lr_2021%asaw_u)

!> rutherfordium.
type(element_t_2021), parameter, public :: Rf_2021 =&
element_t_2021("rutherfordium","Rf", 104, nan, nan, nan, nan, nan, nan)
!> C API rutherfordium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Rf_2021") :: capi_Rf_2021 =&
capi_element_t_2021(&
["r","u","t","h","e","r","f","o","r","d","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "], &
["R","f",c_null_char, " "," "," "," "," "," "], &
Rf_2021%z, &
Rf_2021%saw_max, Rf_2021%saw_min, Rf_2021%saw, Rf_2021%saw_u, Rf_2021%asaw, Rf_2021%asaw_u)

!> dubnium.
type(element_t_2021), parameter, public :: Db_2021 =&
element_t_2021("dubnium","Db", 105, nan, nan, nan, nan, nan, nan)
!> C API dubnium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Db_2021") :: capi_Db_2021 =&
capi_element_t_2021(&
["d","u","b","n","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["D","b",c_null_char, " "," "," "," "," "," "], &
Db_2021%z, &
Db_2021%saw_max, Db_2021%saw_min, Db_2021%saw, Db_2021%saw_u, Db_2021%asaw, Db_2021%asaw_u)

!> seaborgium.
type(element_t_2021), parameter, public :: Sg_2021 =&
element_t_2021("seaborgium","Sg", 106, nan, nan, nan, nan, nan, nan)
!> C API seaborgium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Sg_2021") :: capi_Sg_2021 =&
capi_element_t_2021(&
["s","e","a","b","o","r","g","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["S","g",c_null_char, " "," "," "," "," "," "], &
Sg_2021%z, &
Sg_2021%saw_max, Sg_2021%saw_min, Sg_2021%saw, Sg_2021%saw_u, Sg_2021%asaw, Sg_2021%asaw_u)

!> bohrium.
type(element_t_2021), parameter, public :: Bh_2021 =&
element_t_2021("bohrium","Bh", 107, nan, nan, nan, nan, nan, nan)
!> C API bohrium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Bh_2021") :: capi_Bh_2021 =&
capi_element_t_2021(&
["b","o","h","r","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["B","h",c_null_char, " "," "," "," "," "," "], &
Bh_2021%z, &
Bh_2021%saw_max, Bh_2021%saw_min, Bh_2021%saw, Bh_2021%saw_u, Bh_2021%asaw, Bh_2021%asaw_u)

!> hassium.
type(element_t_2021), parameter, public :: Hs_2021 =&
element_t_2021("hassium","Hs", 108, nan, nan, nan, nan, nan, nan)
!> C API hassium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Hs_2021") :: capi_Hs_2021 =&
capi_element_t_2021(&
["h","a","s","s","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["H","s",c_null_char, " "," "," "," "," "," "], &
Hs_2021%z, &
Hs_2021%saw_max, Hs_2021%saw_min, Hs_2021%saw, Hs_2021%saw_u, Hs_2021%asaw, Hs_2021%asaw_u)

!> meitnerium.
type(element_t_2021), parameter, public :: Mt_2021 =&
element_t_2021("meitnerium","Mt", 109, nan, nan, nan, nan, nan, nan)
!> C API meitnerium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Mt_2021") :: capi_Mt_2021 =&
capi_element_t_2021(&
["m","e","i","t","n","e","r","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["M","t",c_null_char, " "," "," "," "," "," "], &
Mt_2021%z, &
Mt_2021%saw_max, Mt_2021%saw_min, Mt_2021%saw, Mt_2021%saw_u, Mt_2021%asaw, Mt_2021%asaw_u)

!> darmstadtium.
type(element_t_2021), parameter, public :: Ds_2021 =&
element_t_2021("darmstadtium","Ds", 110, nan, nan, nan, nan, nan, nan)
!> C API darmstadtium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Ds_2021") :: capi_Ds_2021 =&
capi_element_t_2021(&
["d","a","r","m","s","t","a","d","t","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "], &
["D","s",c_null_char, " "," "," "," "," "," "], &
Ds_2021%z, &
Ds_2021%saw_max, Ds_2021%saw_min, Ds_2021%saw, Ds_2021%saw_u, Ds_2021%asaw, Ds_2021%asaw_u)

!> roentgenium.
type(element_t_2021), parameter, public :: Rg_2021 =&
element_t_2021("roentgenium","Rg", 111, nan, nan, nan, nan, nan, nan)
!> C API roentgenium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Rg_2021") :: capi_Rg_2021 =&
capi_element_t_2021(&
["r","o","e","n","t","g","e","n","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "], &
["R","g",c_null_char, " "," "," "," "," "," "], &
Rg_2021%z, &
Rg_2021%saw_max, Rg_2021%saw_min, Rg_2021%saw, Rg_2021%saw_u, Rg_2021%asaw, Rg_2021%asaw_u)

!> copernicium.
type(element_t_2021), parameter, public :: Cn_2021 =&
element_t_2021("copernicium","Cn", 112, nan, nan, nan, nan, nan, nan)
!> C API copernicium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Cn_2021") :: capi_Cn_2021 =&
capi_element_t_2021(&
["c","o","p","e","r","n","i","c","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "], &
["C","n",c_null_char, " "," "," "," "," "," "], &
Cn_2021%z, &
Cn_2021%saw_max, Cn_2021%saw_min, Cn_2021%saw, Cn_2021%saw_u, Cn_2021%asaw, Cn_2021%asaw_u)

!> nihonium.
type(element_t_2021), parameter, public :: Nh_2021 =&
element_t_2021("nihonium","Nh", 113, nan, nan, nan, nan, nan, nan)
!> C API nihonium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Nh_2021") :: capi_Nh_2021 =&
capi_element_t_2021(&
["n","i","h","o","n","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["N","h",c_null_char, " "," "," "," "," "," "], &
Nh_2021%z, &
Nh_2021%saw_max, Nh_2021%saw_min, Nh_2021%saw, Nh_2021%saw_u, Nh_2021%asaw, Nh_2021%asaw_u)

!> flerovium.
type(element_t_2021), parameter, public :: Fl_2021 =&
element_t_2021("flerovium","Fl", 114, nan, nan, nan, nan, nan, nan)
!> C API flerovium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Fl_2021") :: capi_Fl_2021 =&
capi_element_t_2021(&
["f","l","e","r","o","v","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["F","l",c_null_char, " "," "," "," "," "," "], &
Fl_2021%z, &
Fl_2021%saw_max, Fl_2021%saw_min, Fl_2021%saw, Fl_2021%saw_u, Fl_2021%asaw, Fl_2021%asaw_u)

!> moscovium.
type(element_t_2021), parameter, public :: Mc_2021 =&
element_t_2021("moscovium","Mc", 115, nan, nan, nan, nan, nan, nan)
!> C API moscovium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Mc_2021") :: capi_Mc_2021 =&
capi_element_t_2021(&
["m","o","s","c","o","v","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["M","c",c_null_char, " "," "," "," "," "," "], &
Mc_2021%z, &
Mc_2021%saw_max, Mc_2021%saw_min, Mc_2021%saw, Mc_2021%saw_u, Mc_2021%asaw, Mc_2021%asaw_u)

!> livermorium.
type(element_t_2021), parameter, public :: Lv_2021 =&
element_t_2021("livermorium","Lv", 116, nan, nan, nan, nan, nan, nan)
!> C API livermorium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Lv_2021") :: capi_Lv_2021 =&
capi_element_t_2021(&
["l","i","v","e","r","m","o","r","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "], &
["L","v",c_null_char, " "," "," "," "," "," "], &
Lv_2021%z, &
Lv_2021%saw_max, Lv_2021%saw_min, Lv_2021%saw, Lv_2021%saw_u, Lv_2021%asaw, Lv_2021%asaw_u)

!> tennesine.
type(element_t_2021), parameter, public :: Ts_2021 =&
element_t_2021("tennesine","Ts", 117, nan, nan, nan, nan, nan, nan)
!> C API tennesine.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Ts_2021") :: capi_Ts_2021 =&
capi_element_t_2021(&
["t","e","n","n","e","s","i","n","e",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["T","s",c_null_char, " "," "," "," "," "," "], &
Ts_2021%z, &
Ts_2021%saw_max, Ts_2021%saw_min, Ts_2021%saw, Ts_2021%saw_u, Ts_2021%asaw, Ts_2021%asaw_u)

!> organesson.
type(element_t_2021), parameter, public :: Og_2021 =&
element_t_2021("organesson","Og", 118, nan, nan, nan, nan, nan, nan)
!> C API organesson.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Og_2021") :: capi_Og_2021 =&
capi_element_t_2021(&
["o","r","g","a","n","e","s","s","o","n",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["O","g",c_null_char, " "," "," "," "," "," "], &
Og_2021%z, &
Og_2021%saw_max, Og_2021%saw_min, Og_2021%saw, Og_2021%saw_u, Og_2021%asaw, Og_2021%asaw_u)


end module ciaaw__saw_2021
